# TestTaskEM

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redis_example.conf
application/: add_values.py  alembic.ini  main.py
application/api/: __init__.py
application/api/api_v1/: __init__.py  container.py
application/api/api_v1/base_schemas/: schemas.py
application/api/api_v1/routes/: __init__.py  auth.py  post.py  work_with_permisiions.py
application/api/api_v1/services/CRUD_posts/: interface.py  service.py
application/api/api_v1/services/auth/: __init__.py  interface.py  schemas.py  service.py
application/api/api_v1/utils/: repository.py
application/core/: config.py
application/core/models/: __init__.py  base.py  db_helper.py
application/core/redis_db/: redis_helper.py
application/migration/: env.py
application/migration/versions/: 2025_07_26_0128-a659d731cdba_first.py  2025_07_27_1617-64c640e49863_user_info.py  2025_07_27_2256-2735381cbfa3_user.py  2025_07_27_2300-9f4146bb1322_user_add_unique.py  2025_07_28_0142-6a75a5f6989d_add_permissions.py
application/secure/: hash_password.py  jwt_functions.py
src/: .example_env  alembic.ini  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  container.py
src/api/v1/routes/: __init__.py  auth.py  post.py  settings.py  work_with_permisiions.py
src/api/v1/utils/: repository.py
src/core/: config.py
src/core/models/: base.py
src/migration/versions/: 2025_07_28_1914-9a55643a28aa_add_posts.py
src/secure/: __init__.py  hash_password.py  jwt_functions.py
(+17 files in other folders)
